# voisia

./: .cursorignore  .gitignore  .prettierignore  README.md  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: api.rs  cmd.rs  dto.rs  lib.rs  llm.rs  log.rs  main.rs
src/features/api/: anthropicApi.ts  openaiApi.ts
