[package]
name = "app"
version = "0.1.0"
description = "Voice-driven Smart Interactive Assistant"
authors = ["Kirimi"]
license = "GPL-3.0"
repository = "https://github.com/okirimi/voisia.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voisia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2.3.0"
tauri-plugin-log = "2.4.0"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
